# NaStCap.core

./: .gitignore  LICENSE.md  README.md
nastcap.core/: main.py  pyproject.toml
nastcap.core/nation_gui/: __init__.py
nastcap.core/nation_gui/config/: __init__.py
nastcap.core/nation_gui/gui/: __init__.py  icons.py  launch.py  nation.py
nastcap.core/nation_gui/gui/issues/: __init__.py  issue.py
nastcap.core/nation_gui/helpers/: __init__.py  issues.py  tools.py
nastcap.core/nation_gui/logger/: __init__.py
